# Yogurtai

./: .gitignore  Activision.py  Dense.py  Layer.py  LossFunction.py  Optimization.py  README.md  Run.py  Tesnsor.py  __init__.py  pyproject.toml  requirements.txt  setup.py  start.py  start2.py
src/: Layer.py  Stats.py  Tesnsor.py
yogurtai/: Activision.py  Dense.py  Layer.py  LossFunction.py  Metrics.py  Optimization.py  Run.py  Stats.py  Tesnsor.py  __init__.py  start.py  start2.py
