[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yogurtai"
version = "0.0.1"
authors = [
  { name="mohsenimehdi1367@gmail.com" },
]
description = "An Easy Ai Library"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mahan100/yogurtai.git"
"Bug Tracker" = "https://github.com/mahan100/yogurtai.git/issues"